# HE-Graph-Embeddings

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  Dockerfile.prod  FINAL_PRODUCTION_READINESS_REPORT.md  PROJECT_CHARTER.md  QUANTUM_IMPLEMENTATION_SUMMARY.md  README.md  RESEARCH_IMPACT_SUMMARY.md  RESEARCH_PAPER_DRAFT.md  SECURITY.md  TERRAGON_BREAKTHROUGH_SUMMARY.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_G2_ROBUSTNESS_COMPLETION.md  TERRAGON_SDLC_V4_COMPLETION_SUMMARY.md  TERRAGON_SDLC_V5_BREAKTHROUGH_COMPLETION.md  TERRAGON_SDLC_V5_QUANTUM_COMPLETION_REPORT.md  autonomous_sdlc_validation_report.json  autonomous_validation.py  autonomous_validation_report.json  basic_quality_report.json  basic_test_results.json  breakthrough_validation_demo.py  breakthrough_validation_results.json  breakthrough_validation_results_20250820_062031.json  docker-compose.prod.yml  docker-compose.yml  multiregion_validation_results.json  performance_validation_results.json  pytest.ini  (+10 more)
--detailed-report/: security_report_scan_1755641361.json
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: quality-gates.yml
benchmark_results/: benchmark_analysis.json  benchmark_report.md  benchmark_results.json  benchmark_specifications.json
benchmarks/: breakthrough_research_benchmarks.py  performance_datasets.py
deployment/terraform/: kubernetes.tf  main.tf
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  QUANTUM_ENHANCEMENT.md  RESEARCH_PAPER_DRAFT.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md
docs/adr/: ADR-001-homomorphic-encryption-scheme.md  template.md
examples/: advanced_usage.py  basic_usage.py
experiments/: research_demo.py  research_validation.py  research_validation_simplified.py
research_validation_results/: research_results.json  terragon_research_summary.md
scripts/: code_quality_enhancer.py  comprehensive_quality_validation.py  entrypoint.sh  final_quality_check.py  healthcheck.py  run_basic_quality_gates.py  run_quality_gates.py  simple_test_runner.py  validate_autonomous_sdlc.py  validate_quantum_implementation.py
security/: policy_enforcer.py  security_config.yaml  security_scanner.py  simple_policy_check.py
security_reports/: security_report_scan_1754480421.json  security_report_scan_1754480451.json  security_report_scan_1755640993.json  security_report_scan_1755641218.json  security_report_scan_1755670281.json  security_report_scan_1755812571.json  security_report_scan_1756211424.json
src/: security_report_scan_1754900608.html  security_report_scan_1754900608.json  security_report_scan_1755142829.json  security_report_scan_1755527809.html  security_report_scan_1755527809.json  security_report_scan_1755973394.json  security_report_scan_1755973606.json
src/api/: health.py  middleware.py  models.py  routes.py  simple_health.py  validators.py
src/autonomous_sdlc/: __init__.py  global_compliance_engine.py  intelligent_checkpoint_selector.py  progressive_quality_orchestrator.py  research_driven_development.py  self_improving_quality_metrics.py
src/ckks/: ckks_context.cpp  ckks_context.h
src/compliance/: __init__.py  compliance_manager.py
src/cuda/: ckks_kernels.cu  ckks_kernels.h
src/database/: connection.py  models.py
src/deployment/: __init__.py  multi_region.py  region_router.py
src/global/: quantum_global_orchestrator.py
src/he_graph/: advanced_optimization.py  cli.py  comprehensive_testing.py  (+4 more)
tests/: conftest.py  test_autonomous_sdlc.py
(+51 files in other folders)
